Closed Bug 572945 Opened 14 years ago Closed 14 years ago

TM: dense arrays specify the wrong number of reserved slots (2 vs 3)

Categories

(Core :: JavaScript Engine, defect)

Other Branch
x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: gal, Assigned: n.nethercote)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

I think this is not fatal because they are non-native.
Assignee: general → nnethercote
Attached patch patchSplinter Review
This is the obvious fix.  I don't much like the fact that the value is never used due to the non-nativeness.  I'm tempted to instead define a constant HAS_RESERVED_SLOTS_IGNORED_BECAUSE_IT_IS_NON_NATIVE or something...
Attachment #452991 - Flags: review?(gal)
Comment on attachment 452991 [details] [diff] [review]
patch

I don't like the constant in the header, but up to you.
Attachment #452991 - Flags: review?(gal) → review+
(In reply to comment #2)
> I don't like the constant in the header, but up to you.

It matches the other cases.  It will eventually be moved into DenseArrayObject whereupon it can become a private member.
http://hg.mozilla.org/tracemonkey/rev/640073c00625
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/640073c00625
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: