Bug 572945 - TM: dense arrays specify the wrong number of reserved slots (2 vs 3).  r=gal.